# esp32-led-strip

./: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
front/web/: README.md  package-lock.json  package.json
front/web/public/: index.html  manifest.json
front/web/src/: App.css  App.js  IroColorPicker.js
main/: CMakeLists.txt  Kconfig.projbuild  esp_rest_main.c  ledc.c  ledc.h  rest_server.c
